Fixed layout bug in code editor

--- a/www/editor3/answer-controls-area.css
+++ b/www/editor3/answer-controls-area.css
@@ -19,6 +19,7 @@
             margin-left: 10px;
             margin-right: 10px;
             vertical-align: middle;
+              resize: none;
         }
 
         /* Define styles for answer request button */
